<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground"
    tools:context=".TipsTricksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative_toolbar_tips"
        android:layout_margin="15dp"
        android:background="@drawable/bg_rubby"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_tips"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="Tips And Tricks"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam1"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam10"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam11"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam3"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam4"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam5"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam6"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam7"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam8"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam9"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam12"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam13"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam14"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam15"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam16"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam17"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam18"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam19"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam20"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam21"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam22"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam23"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/diam24"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_toolbar_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_tips"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_toolbar"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="FAU - G Guid"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>