<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground"
    tools:context=".RubbyActivity">


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@+id/relative_toolbar_rubby"-->
<!--        android:layout_margin="15dp"-->
<!--        android:background="@drawable/bg_rubby"-->
<!--        android:orientation="vertical">-->
        
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_below="@+id/relative_toolbar_rubby"
            android:layout_margin="15dp"
            android:background="#fff"
            card_view:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/nested_rubby"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips1"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips2"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips3"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips4"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips5"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips6"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips7"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips8"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips9"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips10"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips11"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips12"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="@dimen/top_between_para"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tips13"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />
            </LinearLayout>
        </ScrollView>
<!--    </LinearLayout>-->
        </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relative_toolbar_rubby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_rubby"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_toolbar"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="FAU - G Guid"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>