<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/infoPageBackgroundColor"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tray_icon"
            style="@style/InfoButtonStyle"
            android:clickable="false"
            android:drawableTint="@color/color_change"
            android:text="@string/pubg_info_screen_tray_icon"
            android:textColor="#B9B9B9"
            tools:drawableLeft="@drawable/pubg_game_loaded_abc"
            tools:drawableStart="@drawable/pubg_game_loaded_abc"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/view_webpage"
            style="@style/InfoButtonStyle"
            android:drawableLeft="@drawable/pubg_game_loaded_abc"
            android:drawableStart="@drawable/pubg_game_loaded_abc"
            android:drawableTint="@color/color_change"
            android:text="@string/view_webpage"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/send_email"
            style="@style/InfoButtonStyle"
            android:drawableLeft="@drawable/pubg_game_email_icon"
            android:drawableStart="@drawable/pubg_game_email_icon"
            android:drawableTint="@color/color_change"
            android:text="@string/pubg_send_email"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/InfoButtonStyle"
            android:drawableLeft="@drawable/pubg_game_privacy_policy"
            android:drawableStart="@drawable/pubg_game_privacy_policy"
            android:drawableTint="@color/color_change"
            android:text="@string/privacy_policy"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</LinearLayout>
